[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "metric_calendar"
version = "1.0.0"
description = "Metric Calendar date conversion — a rational decimal calendar system"
authors = [{name = "Alex Rabarts"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["calendar", "metric", "date", "conversion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://metricweek.com"
Repository = "https://github.com/alexrabarts/metric-calendar"

[tool.setuptools.packages.find]
where = ["src"]
