[package]
name = "metric_calendar"
version = "1.0.0"
edition = "2021"
authors = ["Alex Rabarts"]
description = "Metric Calendar date conversion — a precision decimal calendar system"
homepage = "https://metricweek.com"
repository = "https://github.com/alexrabarts/metric-calendar"
license = "MIT"
keywords = ["calendar", "metric", "date", "conversion"]
categories = ["date-and-time"]

[lib]
name = "metric_calendar"
